force-app/main/default/objects/ssot__AdConversionTag__dlm/fields/ssot__AdConversionTagGroup__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdConversionTagGroup__c</fullName>
    <label>Ad Conversion Tag Group</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdConversionTagGroup</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>