force-app/main/default/objects/ssot__AdConversionTag__dlm/fields/ssot__PrimaryAdConversionTagCategoryName__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryAdConversionTagCategoryName__c</fullName>
    <label>Primary Ad Conversion Tag Category</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryAdConversionTagCategoryName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>